# rsi-scope

./: README.md  detector.py  main.py  pyproject.toml
