[project]
name = "rsi-scope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "metatrader5>=5.0.5328",
    "pandas>=2.3.3",
    "ta-lib",
]

[tool.uv.sources]
ta-lib = { path = "ta_lib-0.6.7-cp312-cp312-win_amd64.whl" }
